objects/vlocity_cmt__AsyncProcessStep__c.object
<CustomObject>
    <description>To track the step process details</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Additional data that was input to the Execute and Finish Process.</description>
        <label>Additonal Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Async Process object.</description>
        <label>Async Process</label>
        <referenceTo>vlocity_cmt__AsyncProcess__c</referenceTo>
        <relationshipLabel>Async Process Steps</relationshipLabel>
        <relationshipName>AsyncProcessSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the items to be processed given to the Execute and Finish Process.</description>
        <label>Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>success or failure or any message related to async process request.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfItemsProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Currently number of items processed.</description>
        <label>Number Of Items Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartProcessAdditionalData__c</fullName>
        <description>Additional data that was input to the Start Process.</description>
        <label>Start Process Additonal Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartProcessItemsToProcessList__c</fullName>
        <description>List of the items to be processed given to the Start Process.</description>
        <label>Start Process Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>status of this async process request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgess</fullName>
                </value>
                <value>
                    <fullName>InProgess-Fail</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepConfiguration__c</fullName>
        <description>Async Process details and steps (JSON).</description>
        <label>Step Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Step number of this async process step.</description>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalNumberOfItemsToBeProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Currently number of items processed.</description>
        <label>Total Number Of Items To Be Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Async Process Step</label>
    <nameField>
        <label>Async Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Process Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>